# Server

./: AlgorithmTester.h  CMakeLists.txt  PriorityQueue.cpp  PriorityQueue.h  SearchingSolvers.h  Solver.h  StringReverser.h  foo.cpp  main.cpp  solution.txt  testFile.txt
CacheManager/: CacheManager.h  FileCacheManager.cpp  FileCacheManager.h
CommandReader/: CommandLineReader.cpp  CommandLineReader.h  CommandReader.h  FileReader.h
Matrices/: matrix1.txt  matrix10.txt  matrix2.txt  matrix3.txt  matrix4.txt  matrix5.txt  matrix6.txt  matrix7.txt  matrix8.txt  matrix9.txt
Searchable/: ISearchable.h  Matrix.h  State.h
Searchers/: AStar.h  BFS.h  BestFirstSearch.h  DFS.h  ISearcher.h
Servers/: Exceptions.h  ParallelServer.cpp  ParallelServer.h  SerialServer.cpp  SerialServer.h  Server.h  Sockets.cpp  Sockets.h  StartDecorator.h  Task.h  ThreadPool.h  ThreadPoolTest.h
Servers/ClientHandle/: ClientHandler.h  LexerFunction.cpp  LexerFunction.h  MatrixClientHandler.h  TestClientHandler.cpp  TestClientHandler.h
